translations_exported/it/docs_exported/1.19/crafttweaker/docs/vanilla/api/game/Server.md
# Server

## Importare la Classe

It might be required for you to import the package if you encounter any issues (like casting an Array), so better be safe than sorry and add the import at the very top of the file.
```zenscript
import crafttweaker.api.game.Server;
```


## Interfacce Implementate
Server implements the following interfaces. That means all methods defined in these interfaces are also available in Server

- [CommandSource](/vanilla/api/command/CommandSource)
- AutoCloseable

## Metodi

:::group{name=areNpcsEnabled}

Return Type: boolean

```zenscript
// Server.areNpcsEnabled() as boolean

myServer.areNpcsEnabled();
```

:::

:::group{name=executeCommand}

Runs a command, if silent is true, the output is hidden.

 Returns The success value of the command, or 0 if an exception occurred.

 Note: Some commands' success value is 0

Return Type: int

```zenscript
// Server.executeCommand(command as string, silent as boolean) as int

myServer.executeCommand("time set day", true);
```

| Parametro | Tipo    | Optional | Default Value |
| --------- | ------- | -------- | ------------- |
| command   | string  | no       |               |
| silent    | boolean | sì       | no            |


:::

:::group{name=executeCommand}

let a player send a command, if silent is true, the output is hidden.

 Returns The success value of the command, or 0 if an exception occurred.

 Note: Some commands' success value is 0

Return Type: int

```zenscript
// Server.executeCommand(command as string, player as Player, silent as boolean) as int

myServer.executeCommand("time set day", player, true);
```

| Parametro | Tipo                                             | Optional | Default Value |
| --------- | ------------------------------------------------ | -------- | ------------- |
| command   | string                                           | no       |               |
| player    | [Player](/vanilla/api/entity/type/player/Player) | no       |               |
| silent    | boolean                                          | sì       | no            |


:::

:::group{name=getAbsoluteMaxWorldSize}

Return Type: int

```zenscript
// Server.getAbsoluteMaxWorldSize() as int

myServer.getAbsoluteMaxWorldSize();
```

:::

:::group{name=getAllLevels}

Return Type: stdlib.Iterable&lt;[ServerLevel](/vanilla/api/world/ServerLevel)&gt;

```zenscript
// Server.getAllLevels() as stdlib.Iterable<ServerLevel>

myServer.getAllLevels();
```

:::

:::group{name=getAverageTickTime}

Return Type: float

```zenscript
// Server.getAverageTickTime() as float

myServer.getAverageTickTime();
```

:::

:::group{name=getDefaultGameType}

Return Type: [GameType](/vanilla/api/world/GameType)

```zenscript
// Server.getDefaultGameType() as GameType

myServer.getDefaultGameType();
```

:::

:::group{name=getForcedGameType}

Return Type: [GameType](/vanilla/api/world/GameType)?

```zenscript
// Server.getForcedGameType() as GameType?

myServer.getForcedGameType();
```

:::

:::group{name=getLevel}

Return Type: [ServerLevel](/vanilla/api/world/ServerLevel)?

```zenscript
Server.getLevel(location as ResourceLocation) as ServerLevel?
```

| Parametro | Tipo                                                       |
| --------- | ---------------------------------------------------------- |
| posizione | [ResourceLocation](/vanilla/api/resource/ResourceLocation) |


:::

:::group{name=getMaxPlayers}

Return Type: int

```zenscript
// Server.getMaxPlayers() as int

myServer.getMaxPlayers();
```

:::

:::group{name=getModdedStatus}

Return Type: string?

```zenscript
// Server.getModdedStatus() as string?

myServer.getModdedStatus();
```

:::

:::group{name=getMotd}

Return Type: string

```zenscript
// Server.getMotd() as string

myServer.getMotd();
```

:::

:::group{name=getOperatorUserPermissionLevel}

Return Type: int

```zenscript
// Server.getOperatorUserPermissionLevel() as int

myServer.getOperatorUserPermissionLevel();
```

:::

:::group{name=getOverworldData}

Gets the custom data of the overworld.

 The overworld is always loaded, so this can be used to store and access data no matter what level a player may be in.

Returns: The overworld's custom data.  
Return Type: [CraftTweakerSavedData](/vanilla/api/world/CraftTweakerSavedData)

```zenscript
// Server.getOverworldData() as CraftTweakerSavedData

myServer.getOverworldData();
```

:::

:::group{name=getPlayerCount}

Return Type: int

```zenscript
// Server.getPlayerCount() as int

myServer.getPlayerCount();
```

:::

:::group{name=getPlayerNames}

Return Type: string[]

```zenscript
// Server.getPlayerNames() as string[]

myServer.getPlayerNames();
```

:::

:::group{name=getServerModName}

Return Type: string

```zenscript
// Server.getServerModName() as string

myServer.getServerModName();
```

:::

:::group{name=getServerVersion}

Return Type: string

```zenscript
// Server.getServerVersion() as string

myServer.getServerVersion();
```

:::

:::group{name=getSpawnProtectionRadius}

Return Type: int

```zenscript
// Server.getSpawnProtectionRadius() as int

myServer.getSpawnProtectionRadius();
```

:::

:::group{name=getSpawnRadius}

Return Type: int

```zenscript
Server.getSpawnRadius(level as ServerLevel?) as int
```

| Parametro | Tipo                                           |
| --------- | ---------------------------------------------- |
| level     | [ServerLevel](/vanilla/api/world/ServerLevel)? |


:::

:::group{name=getTickCount}

Return Type: int

```zenscript
// Server.getTickCount() as int

myServer.getTickCount();
```

:::

:::group{name=isCommandBlockEnabled}

Return Type: boolean

```zenscript
// Server.isCommandBlockEnabled() as boolean

myServer.isCommandBlockEnabled();
```

:::

:::group{name=isDedicatedServer}

Return Type: boolean

```zenscript
// Server.isDedicatedServer() as boolean

myServer.isDedicatedServer();
```

:::

:::group{name=isEnforceWhitelist}

Return Type: boolean

```zenscript
// Server.isEnforceWhitelist() as boolean

myServer.isEnforceWhitelist();
```

:::

:::group{name=isFlightAllowed}

Return Type: boolean

```zenscript
// Server.isFlightAllowed() as boolean

myServer.isFlightAllowed();
```

:::

:::group{name=isHardcore}

Return Type: boolean

```zenscript
// Server.isHardcore() as boolean

myServer.isHardcore();
```

:::

:::group{name=isNetherEnabled}

Return Type: boolean

```zenscript
// Server.isNetherEnabled() as boolean

myServer.isNetherEnabled();
```

:::

:::group{name=isPvpAllowed}

Return Type: boolean

```zenscript
// Server.isPvpAllowed() as boolean

myServer.isPvpAllowed();
```

:::

:::group{name=isReady}

Return Type: boolean

```zenscript
// Server.isReady() as boolean

myServer.isReady();
```

:::

:::group{name=isRunning}

Return Type: boolean

```zenscript
// Server.isRunning() as boolean

myServer.isRunning();
```

:::

:::group{name=isShutdown}

Return Type: boolean

```zenscript
// Server.isShutdown() as boolean

myServer.isShutdown();
```

:::

:::group{name=isSingleplayer}

Return Type: boolean

```zenscript
// Server.isSingleplayer() as boolean

myServer.isSingleplayer();
```

:::

:::group{name=isSpawningAnimals}

Return Type: boolean

```zenscript
// Server.isSpawningAnimals() as boolean

myServer.isSpawningAnimals();
```

:::

:::group{name=isSpawningMonsters}

Return Type: boolean

```zenscript
// Server.isSpawningMonsters() as boolean

myServer.isSpawningMonsters();
```

:::

:::group{name=isStopped}

Return Type: boolean

```zenscript
// Server.isStopped() as boolean

myServer.isStopped();
```

:::

:::group{name=isUnderSpawnProtection}

Return Type: boolean

```zenscript
Server.isUnderSpawnProtection(level as ServerLevel, pos as BlockPos, player as Player) as boolean
```

| Parametro | Tipo                                             |
| --------- | ------------------------------------------------ |
| level     | [ServerLevel](/vanilla/api/world/ServerLevel)    |
| pos       | [BlockPos](/vanilla/api/util/math/BlockPos)      |
| player    | [Player](/vanilla/api/entity/type/player/Player) |


:::

:::group{name=levelKeys}

Return Type: stdlib.List&lt;[ResourceLocation](/vanilla/api/resource/ResourceLocation)&gt;

```zenscript
// Server.levelKeys() as stdlib.List<ResourceLocation>

myServer.levelKeys();
```

:::

:::group{name=overworld}

Return Type: [ServerLevel](/vanilla/api/world/ServerLevel)

```zenscript
// Server.overworld() as ServerLevel

myServer.overworld();
```

:::

:::group{name=setDefaultGameType}

```zenscript
Server.setDefaultGameType(gameType as GameType)
```

| Parametro | Tipo                                    |
| --------- | --------------------------------------- |
| gameType  | [GameType](/vanilla/api/world/GameType) |


:::

:::group{name=setDifficulty}

```zenscript
Server.setDifficulty(difficulty as Difficulty, force as boolean)
```

| Parametro  | Tipo                                        |
| ---------- | ------------------------------------------- |
| difficulty | [Difficulty](/vanilla/api/world/Difficulty) |
| force      | boolean                                     |


:::

:::group{name=setDifficultyLocked}

```zenscript
Server.setDifficultyLocked(locked as boolean)
```

| Parametro | Tipo    |
| --------- | ------- |
| locked    | boolean |


:::

:::group{name=setEnforceWhitelist}

```zenscript
Server.setEnforceWhitelist(enforceWhitelist as boolean)
```

| Parametro        | Tipo    |
| ---------------- | ------- |
| enforceWhitelist | boolean |


:::

:::group{name=setFlightAllowed}

```zenscript
Server.setFlightAllowed(flightAllowed as boolean)
```

| Parametro     | Tipo    |
| ------------- | ------- |
| flightAllowed | boolean |


:::

:::group{name=setMotd}

```zenscript
Server.setMotd(motd as string)
```

| Parametro | Tipo   |
| --------- | ------ |
| motd      | string |


:::

:::group{name=setPvpAllowed}

```zenscript
Server.setPvpAllowed(pvpAllowed as boolean)
```

| Parametro  | Tipo    |
| ---------- | ------- |
| pvpAllowed | boolean |


:::


## Proprietà

| Nome                        | Tipo                                                                                      | Ha Getter | Ha Setter | Descrizione                                                                                                                                                                              |
| --------------------------- | ----------------------------------------------------------------------------------------- | --------- | --------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| absoluteMaxWorldSize        | int                                                                                       | sì        | no        |                                                                                                                                                                                          |
| allLevels                   | stdlib.Iterable&lt;[ServerLevel](/vanilla/api/world/ServerLevel)&gt;          | sì        | no        |                                                                                                                                                                                          |
| areNpcsEnabled              | boolean                                                                                   | sì        | no        |                                                                                                                                                                                          |
| averageTickTime             | float                                                                                     | sì        | no        |                                                                                                                                                                                          |
| defaultGameTime             | [GameType](/vanilla/api/world/GameType)                                                   | sì        | no        |                                                                                                                                                                                          |
| forcedGameType              | [GameType](/vanilla/api/world/GameType)?                                                  | sì        | no        |                                                                                                                                                                                          |
| isCommandBlockEnabled       | boolean                                                                                   | sì        | no        |                                                                                                                                                                                          |
| isDedicatedServer           | boolean                                                                                   | sì        | no        |                                                                                                                                                                                          |
| isEnforceWhitelist          | boolean                                                                                   | sì        | no        |                                                                                                                                                                                          |
| isFlightAllowed             | boolean                                                                                   | sì        | no        |                                                                                                                                                                                          |
| isHardcore                  | boolean                                                                                   | sì        | no        |                                                                                                                                                                                          |
| isNetherEnabled             | boolean                                                                                   | sì        | no        |                                                                                                                                                                                          |
| isPvpAllowed                | boolean                                                                                   | sì        | no        |                                                                                                                                                                                          |
| isReady                     | boolean                                                                                   | sì        | no        |                                                                                                                                                                                          |
| isRunning                   | boolean                                                                                   | sì        | no        |                                                                                                                                                                                          |
| isShutdown                  | boolean                                                                                   | sì        | no        |                                                                                                                                                                                          |
| isSingleplayer              | boolean                                                                                   | sì        | no        |                                                                                                                                                                                          |
| isSpawningAnimals           | boolean                                                                                   | sì        | no        |                                                                                                                                                                                          |
| isSpawningMonsters          | boolean                                                                                   | sì        | no        |                                                                                                                                                                                          |
| isStopped                   | boolean                                                                                   | sì        | no        |                                                                                                                                                                                          |
| levelKeys                   | stdlib.List&lt;[ResourceLocation](/vanilla/api/resource/ResourceLocation)&gt; | sì        | no        |                                                                                                                                                                                          |
| maxPlayer                   | int                                                                                       | sì        | no        |                                                                                                                                                                                          |
| moddeStatus                 | string?                                                                                   | sì        | no        |                                                                                                                                                                                          |
| motd                        | string                                                                                    | sì        | no        |                                                                                                                                                                                          |
| operatorUserPermissionLevel | int                                                                                       | sì        | no        |                                                                                                                                                                                          |
| overworld                   | [ServerLevel](/vanilla/api/world/ServerLevel)                                             | sì        | no        |                                                                                                                                                                                          |
| overworldData               | [CraftTweakerSavedData](/vanilla/api/world/CraftTweakerSavedData)                         | sì        | no        | Gets the custom data of the overworld. <br />  <br />  The overworld is always loaded, so this can be used to store and access data no matter what level a player may be in. |
| playerCount                 | int                                                                                       | sì        | no        |                                                                                                                                                                                          |
| playerNames                 | string[]                                                                                  | sì        | no        |                                                                                                                                                                                          |
| serverModName               | string                                                                                    | sì        | no        |                                                                                                                                                                                          |
| serverVersion               | string                                                                                    | sì        | no        |                                                                                                                                                                                          |
| spawnProtectionRadius       | int                                                                                       | sì        | no        |                                                                                                                                                                                          |
| tickCount                   | int                                                                                       | sì        | no        |                                                                                                                                                                                          |

